--- a/index.html
+++ b/index.html
@@ -136,14 +136,61 @@
         }
 
         .winner-name-banner {
+            position: relative;
+            z-index: 3;
             animation: winnerRise 0.8s ease-out forwards;
             text-shadow: 0 10px 30px rgba(0, 0, 0, 0.55);
+        }
+
+        .tournament-prize-glow {
+            position: absolute;
+            width: min(56vw, 220px);
+            height: min(56vw, 220px);
+            border-radius: 9999px;
+            background: radial-gradient(circle, rgba(231, 227, 89, 0.32) 0%, rgba(231, 227, 89, 0.06) 52%, rgba(0, 0, 0, 0) 72%);
+            top: 48%;
+            left: 50%;
+            transform: translate(-50%, 42px) scale(0.72);
+            z-index: 1;
+            pointer-events: none;
+            animation: prizeRiseGlow 1.2s ease-out 0.18s forwards, prizeGlowPulse 2.2s ease-in-out 1.3s infinite;
+        }
+
+        .tournament-prize-image {
+            position: absolute;
+            width: min(48vw, 180px);
+            max-height: 36vh;
+            object-fit: contain;
+            left: 50%;
+            top: 48%;
+            transform: translate(-50%, 64px) scale(0.68);
+            opacity: 0;
+            filter: drop-shadow(0 18px 26px rgba(0, 0, 0, 0.52));
+            z-index: 2;
+            pointer-events: none;
+            animation: prizeRise 1.15s ease-out 0.12s forwards;
         }
 
         @keyframes winnerRise {
             0% { opacity: 0; transform: translateY(20px) scale(0.8); }
             60% { opacity: 1; transform: translateY(-6px) scale(1.04); }
             100% { opacity: 1; transform: translateY(0) scale(1); }
+        }
+
+        @keyframes prizeRise {
+            0% { opacity: 0; transform: translate(-50%, 64px) scale(0.68); }
+            68% { opacity: 1; transform: translate(-50%, -190px) scale(1.01); }
+            100% { opacity: 0.95; transform: translate(-50%, -220px) scale(1); }
+        }
+
+        @keyframes prizeRiseGlow {
+            0% { opacity: 0; transform: translate(-50%, 42px) scale(0.72); }
+            100% { opacity: 0.82; transform: translate(-50%, -184px) scale(1); }
+        }
+
+        @keyframes prizeGlowPulse {
+            0%, 100% { opacity: 0.62; transform: translate(-50%, -184px) scale(1); }
+            50% { opacity: 0.95; transform: translate(-50%, -184px) scale(1.08); }
         }
 
         @keyframes fadeInOut {
@@ -163,6 +210,7 @@
     const STARTING_SCORE = 301;
     const LEGS_TO_WIN = 3;
     const VICTORY_MUSIC_SRC = 'assets/victory-music.mp3';
+    const TOURNAMENT_PRIZE_SRC = 'assets/tournament-prize.png';
     const TOURNAMENT_CACHE_KEY = 'teepee-darts-cup-state-v1';
     const BOGEY_NUMBERS = new Set([169, 168, 166, 165, 163, 162, 159]);
     const FAVORITE_DOUBLES = [40, 32, 24, 16, 20, 36, 12, 8, 4, 2];
@@ -855,6 +903,7 @@
         const [bust, setBust] = useState(false);
         const [winnerOfLeg, setWinnerOfLeg] = useState(null);
         const [isFinishingMatch, setIsFinishingMatch] = useState(false);
+        const [hasTournamentPrize, setHasTournamentPrize] = useState(false);
 
         const [initialStarter] = useState(() => (Math.random() < 0.5 ? 0 : 1));
         const [coinFlipLabel] = useState(() => (initialStarter === 0 ? players[match.p1] : players[match.p2]));
@@ -884,6 +933,7 @@
 
         const currentPlayerIdx = turn === 0 ? match.p1 : match.p2;
         const currentScore = turn === 0 ? p1Score : p2Score;
+        const showTournamentPrize = hasTournamentPrize && match.id === 'f';
 
         useEffect(() => {
             const audio = new Audio(VICTORY_MUSIC_SRC);
@@ -902,6 +952,18 @@
                 if (!victoryAudioRef.current) return;
                 victoryAudioRef.current.pause();
                 victoryAudioRef.current = null;
+            };
+        }, []);
+
+        useEffect(() => {
+            const prizeImage = new Image();
+            prizeImage.onload = () => setHasTournamentPrize(true);
+            prizeImage.onerror = () => setHasTournamentPrize(false);
+            prizeImage.src = TOURNAMENT_PRIZE_SRC;
+
+            return () => {
+                prizeImage.onload = null;
+                prizeImage.onerror = null;
             };
         }, []);
 
@@ -1135,11 +1197,17 @@
             <div className="fixed inset-0 z-50 bg-slate-950 flex flex-col font-sans">
                 {bust && <div className="absolute inset-0 z-[60] flex items-center justify-center bg-black/60"><div className="bust-overlay text-9xl font-black text-red-500 italic">BUST!</div></div>}
                 {isFinishingMatch && (
-                    <div className="absolute inset-0 z-[65] flex items-center justify-center bg-black/70">
-                        <div className="text-center px-6">
-                            <div className="text-yellow-400 text-4xl md:text-6xl font-black uppercase mb-4">Ottelu voitettu!</div>
+                    <div className="absolute inset-0 z-[65] flex items-center justify-center bg-black/70 overflow-hidden">
+                        {showTournamentPrize && (
+                            <>
+                                <div className="tournament-prize-glow" aria-hidden="true"></div>
+                                <img src={TOURNAMENT_PRIZE_SRC} alt="Turnauspalkinto" className="tournament-prize-image" />
+                            </>
+                        )}
+                        <div className="text-center px-6 relative z-[3]">
+                            <div className="relative z-[3] text-yellow-400 text-4xl md:text-6xl font-black uppercase mb-4">Ottelu voitettu!</div>
                             <div className="winner-name-banner text-white text-5xl md:text-8xl font-black uppercase tracking-wide">{players[winnerOfLeg === 0 ? match.p1 : match.p2]}</div>
-                            <div className="text-emerald-100 mt-4 uppercase tracking-[0.35em] text-xs md:text-sm">Mestari lavalla</div>
+                            <div className="relative z-[3] text-emerald-100 mt-4 uppercase tracking-[0.35em] text-xs md:text-sm">Mestari lavalla</div>
                         </div>
                     </div>
                 )}
