--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             background: radial-gradient(circle, rgba(231, 227, 89, 0.32) 0%, rgba(231, 227, 89, 0.06) 52%, rgba(0, 0, 0, 0) 72%);
             top: 48%;
             left: 50%;
-            transform: translate(-50%, 42px) scale(0.72);
+            transform: translate(-50%, 22px) scale(0.72);
             z-index: 1;
             pointer-events: none;
             animation: prizeRiseGlow 1.2s ease-out 0.18s forwards, prizeGlowPulse 2.2s ease-in-out 1.3s infinite;
@@ -163,7 +163,7 @@
             object-fit: contain;
             left: 50%;
             top: 48%;
-            transform: translate(-50%, 64px) scale(0.68);
+            transform: translate(-50%, 44px) scale(0.68);
             opacity: 0;
             filter: drop-shadow(0 18px 26px rgba(0, 0, 0, 0.52));
             z-index: 2;
@@ -178,19 +178,19 @@
         }
 
         @keyframes prizeRise {
-            0% { opacity: 0; transform: translate(-50%, 64px) scale(0.68); }
-            68% { opacity: 1; transform: translate(-50%, -190px) scale(1.01); }
-            100% { opacity: 0.95; transform: translate(-50%, -220px) scale(1); }
+            0% { opacity: 0; transform: translate(-50%, 44px) scale(0.68); }
+            68% { opacity: 1; transform: translate(-50%, -230px) scale(1.01); }
+            100% { opacity: 0.95; transform: translate(-50%, -260px) scale(1); }
         }
 
         @keyframes prizeRiseGlow {
-            0% { opacity: 0; transform: translate(-50%, 42px) scale(0.72); }
-            100% { opacity: 0.82; transform: translate(-50%, -184px) scale(1); }
+            0% { opacity: 0; transform: translate(-50%, 22px) scale(0.72); }
+            100% { opacity: 0.82; transform: translate(-50%, -224px) scale(1); }
         }
 
         @keyframes prizeGlowPulse {
-            0%, 100% { opacity: 0.62; transform: translate(-50%, -184px) scale(1); }
-            50% { opacity: 0.95; transform: translate(-50%, -184px) scale(1.08); }
+            0%, 100% { opacity: 0.62; transform: translate(-50%, -224px) scale(1); }
+            50% { opacity: 0.95; transform: translate(-50%, -224px) scale(1.08); }
         }
 
         @keyframes fadeInOut {
@@ -989,6 +989,7 @@
 
         const finishMatchWithCelebration = (winner, finalLegs, updatedHistory) => {
             if (isFinishingMatch) return;
+            setWinnerOfLeg(winner);
             setIsFinishingMatch(true);
 
             const audio = playVictoryMusic();
@@ -1014,6 +1015,20 @@
                 : 9000;
 
             celebrationTimeoutRef.current = setTimeout(complete, fallbackMs);
+        };
+
+        const handleForfeit = (forfeitingPlayer) => {
+            if (isFinishingMatch) return;
+
+            const winner = forfeitingPlayer === 0 ? 1 : 0;
+            const winnerName = players[winner === 0 ? match.p1 : match.p2];
+            const forfeitingName = players[forfeitingPlayer === 0 ? match.p1 : match.p2];
+
+            const confirmed = window.confirm(`${forfeitingName} luovuttaa ottelun. Hyväksytäänkö tulokseksi 3-0 (${winnerName})?`);
+            if (!confirmed) return;
+
+            const finalLegs = winner === 0 ? [LEGS_TO_WIN, 0] : [0, LEGS_TO_WIN];
+            finishMatchWithCelebration(winner, finalLegs, history);
         };
 
         const pushStep = (snapshot) => {
@@ -1223,6 +1238,22 @@
                     <div className="grid grid-cols-2 gap-4">
                         <div className={`p-6 rounded-3xl border-4 ${turn === 0 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-7xl font-mono font-black text-center">{p1Score}</div></div>
                         <div className={`p-6 rounded-3xl border-4 ${turn === 1 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-7xl font-mono font-black text-center">{p2Score}</div></div>
+                    </div>
+                    <div className="grid grid-cols-2 gap-3">
+                        <button
+                            onClick={() => handleForfeit(0)}
+                            disabled={isFinishingMatch}
+                            className={`dart-btn h-11 text-xs uppercase tracking-wide ${isFinishingMatch ? 'opacity-40 cursor-not-allowed' : 'text-red-300 border-red-500/30 bg-red-500/10 hover:bg-red-500/20'}`}
+                        >
+                            {players[match.p1]} luovuttaa
+                        </button>
+                        <button
+                            onClick={() => handleForfeit(1)}
+                            disabled={isFinishingMatch}
+                            className={`dart-btn h-11 text-xs uppercase tracking-wide ${isFinishingMatch ? 'opacity-40 cursor-not-allowed' : 'text-red-300 border-red-500/30 bg-red-500/10 hover:bg-red-500/20'}`}
+                        >
+                            {players[match.p2]} luovuttaa
+                        </button>
                     </div>
                     <div className="rounded-2xl border border-yellow-500/35 bg-yellow-500/10 px-4 py-3 text-xs uppercase tracking-wide">
                         <div className="flex items-center justify-between gap-3">
