--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             background: radial-gradient(circle at top, #0f624f 0%, var(--bg-dark) 50%, #02140f 100%);
             color: #f8fafc;
             min-height: 100vh;
+            overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         .brand-logo {
@@ -1419,7 +1421,7 @@
         };
 
         return (
-            <div className="fixed inset-0 z-50 bg-slate-950 flex flex-col font-sans">
+            <div className="fixed inset-0 z-50 bg-slate-950 flex flex-col font-sans overflow-y-auto overscroll-contain touch-pan-y" style={{ WebkitOverflowScrolling: 'touch' }}>
                 {bust && <div className="absolute inset-0 z-[60] flex items-center justify-center bg-black/60"><div className="bust-overlay text-6xl sm:text-9xl font-black text-red-500 italic">BUST!</div></div>}
                 {isFinishingMatch && (
                     <div className="absolute inset-0 z-[65] flex items-center justify-center bg-black/70 overflow-hidden">
@@ -1444,7 +1446,7 @@
                     </div>
                     <div className="w-6 sm:w-10"></div>
                 </div>
-                <div className="flex-1 flex flex-col p-3 sm:p-4 gap-3 sm:gap-4 max-w-4xl mx-auto w-full">
+                <div className="flex-1 flex flex-col p-3 sm:p-4 gap-3 sm:gap-4 max-w-4xl mx-auto w-full min-h-[100svh]">
                     <div className="grid grid-cols-2 gap-4">
                         <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${turn === 0 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p1Score}</div></div>
                         <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${turn === 1 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p2Score}</div></div>
@@ -1505,7 +1507,7 @@
                             </div>
                         </div>
                     )}
-                    <div className="flex-1 flex flex-col items-center justify-center gap-3 sm:gap-4 bg-white/5 rounded-2xl sm:rounded-3xl border border-white/10 p-2 sm:p-0">
+                    <div className="flex-none sm:flex-1 flex flex-col items-center justify-center gap-3 sm:gap-4 bg-white/5 rounded-2xl sm:rounded-3xl border border-white/10 p-2 sm:p-0 min-h-[120px]">
                         {winnerOfLeg !== null ? (
                             <div className="text-center animate-bounce">
                                 <div className="text-yellow-500 text-3xl sm:text-4xl font-black mb-4 uppercase">LEG VOITETTU!</div>
