--- a/index.html
+++ b/index.html
@@ -165,6 +165,74 @@
             animation: fadeInOut 1s forwards;
         }
 
+        .coin-flip-overlay {
+            position: absolute;
+            inset: 0;
+            z-index: 70;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            background: radial-gradient(circle at center, rgba(3, 43, 36, 0.86) 0%, rgba(0, 0, 0, 0.94) 65%);
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+            animation: fadeCoinOverlay 0.4s ease;
+        }
+
+        .coin-flip-stage {
+            perspective: 900px;
+            width: min(62vw, 230px);
+            height: min(62vw, 230px);
+            display: grid;
+            place-items: center;
+        }
+
+        .coin-flip {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            border-radius: 9999px;
+            transform-style: preserve-3d;
+            animation: coinFlySpin 2.2s cubic-bezier(0.25, 0.65, 0.3, 1) forwards;
+        }
+
+        .coin-face {
+            position: absolute;
+            inset: 0;
+            border-radius: 9999px;
+            border: 3px solid rgba(255, 245, 157, 0.9);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 1.2rem;
+            font-size: clamp(1.05rem, 3.3vw, 1.6rem);
+            line-height: 1.15;
+            font-weight: 700;
+            color: #fffde7;
+            text-shadow: 0 6px 18px rgba(0, 0, 0, 0.5);
+            box-shadow: inset 0 0 0 3px rgba(120, 53, 15, 0.35), 0 16px 30px rgba(0, 0, 0, 0.4);
+            background: radial-gradient(circle at 30% 30%, #ffe082 0%, #f9a825 55%, #c66900 100%);
+            backface-visibility: hidden;
+        }
+
+        .coin-face-back {
+            transform: rotateY(180deg);
+        }
+
+        @keyframes coinFlySpin {
+            0% { transform: translateY(150px) rotateX(0deg) rotateY(0deg) scale(0.8); }
+            35% { transform: translateY(-180px) rotateX(720deg) rotateY(900deg) scale(1); }
+            72% { transform: translateY(-20px) rotateX(1320deg) rotateY(1650deg) scale(0.95); }
+            100% { transform: translateY(0) rotateX(1440deg) rotateY(1800deg) scale(1); }
+        }
+
+        @keyframes fadeCoinOverlay {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
         .winner-name-banner {
             position: relative;
             z-index: 3;
@@ -1119,6 +1187,7 @@
 
         const [initialStarter] = useState(() => (Math.random() < 0.5 ? 0 : 1));
         const [coinFlipLabel] = useState(() => (initialStarter === 0 ? players[match.p1] : players[match.p2]));
+        const [showCoinFlipAnimation, setShowCoinFlipAnimation] = useState(true);
         const currentLegIndex = legs[0] + legs[1];
         const legStarter = currentLegIndex % 2 === 0 ? initialStarter : 1 - initialStarter;
 
@@ -1146,6 +1215,14 @@
         const currentPlayerIdx = turn === 0 ? match.p1 : match.p2;
         const currentScore = turn === 0 ? p1Score : p2Score;
         const showTournamentPrize = hasTournamentPrize && match.id === 'f';
+
+        useEffect(() => {
+            const timer = setTimeout(() => {
+                setShowCoinFlipAnimation(false);
+            }, 2600);
+
+            return () => clearTimeout(timer);
+        }, []);
 
         useEffect(() => {
             const audio = new Audio(VICTORY_MUSIC_SRC);
@@ -1422,6 +1499,22 @@
 
         return (
             <div className="fixed inset-0 z-50 bg-slate-950 flex flex-col font-sans overflow-y-auto overscroll-contain touch-pan-y" style={{ WebkitOverflowScrolling: 'touch' }}>
+                {showCoinFlipAnimation && (
+                    <div className="coin-flip-overlay">
+                        <div className="text-yellow-300 font-black text-sm sm:text-base">Aloittajan arvonta käynnissä...</div>
+                        <div className="coin-flip-stage" aria-live="polite">
+                            <div className="coin-flip" role="img" aria-label={`Kolikko pyörii. Pelaajat ${players[match.p1]} ja ${players[match.p2]}`}>
+                                <div className="coin-face">{players[match.p1]}</div>
+                                <div className="coin-face coin-face-back">{players[match.p2]}</div>
+                            </div>
+                        </div>
+                        <div className="text-center">
+                            <div className="text-[11px] text-slate-300">Kolikko laskeutui:</div>
+                            <div className="text-3xl sm:text-4xl text-white font-black mt-1">{coinFlipLabel}</div>
+                            <div className="text-xs text-yellow-300 mt-1">aloittaa ottelun</div>
+                        </div>
+                    </div>
+                )}
                 {bust && <div className="absolute inset-0 z-[60] flex items-center justify-center bg-black/60"><div className="bust-overlay text-6xl sm:text-9xl font-black text-red-500 italic">BUST!</div></div>}
                 {isFinishingMatch && (
                     <div className="absolute inset-0 z-[65] flex items-center justify-center bg-black/70 overflow-hidden">
