--- a/index.html
+++ b/index.html
@@ -165,6 +165,32 @@
             animation: fadeInOut 1s forwards;
         }
 
+        .starter-coin {
+            width: min(56vw, 280px);
+            height: min(56vw, 280px);
+            border-radius: 9999px;
+            border: 3px solid rgba(254, 240, 138, 0.9);
+            background: radial-gradient(circle at 35% 28%, #fef08a 0%, #facc15 30%, #f59e0b 70%, #b45309 100%);
+            box-shadow: 0 0 0 4px rgba(217, 119, 6, 0.35), 0 22px 42px rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1.2rem;
+            animation: starterCoinDrop 2.5s ease-out forwards;
+        }
+
+        .starter-coin-name {
+            color: #ffffff;
+            text-shadow: 0 6px 16px rgba(0, 0, 0, 0.45);
+            letter-spacing: 0.05em;
+            font-weight: 900;
+            text-transform: uppercase;
+            text-align: center;
+            line-height: 1.1;
+            font-size: clamp(1.4rem, 4.2vw, 2.6rem);
+            animation: starterCoinNameSettle 2.5s ease-out forwards;
+        }
+
         .winner-name-banner {
             position: relative;
             z-index: 3;
@@ -228,6 +254,20 @@
             20% { opacity: 1; transform: scale(1.1); }
             80% { opacity: 1; transform: scale(1); }
             100% { opacity: 0; transform: scale(1.2); }
+        }
+
+        @keyframes starterCoinDrop {
+            0% { opacity: 0; transform: translateY(-180px) rotateX(70deg) scale(0.65); }
+            35% { opacity: 1; transform: translateY(16px) rotateX(0deg) scale(1.06); }
+            55% { transform: translateY(-10px) scale(0.98); }
+            72% { transform: translateY(6px) scale(1.02); }
+            100% { opacity: 1; transform: translateY(0) scale(1); }
+        }
+
+        @keyframes starterCoinNameSettle {
+            0% { opacity: 0; transform: scale(0.6); }
+            30% { opacity: 1; transform: scale(1.1); }
+            100% { opacity: 1; transform: scale(1); }
         }
 
         @media (max-width: 768px) {
@@ -1082,7 +1122,7 @@
                     )}
                 </main>
 
-                {activeMatch && <DartsCalculator match={activeMatch} players={players} onClose={() => setActiveMatch(null)} onSave={handleMatchEnd} />}
+                {activeMatch && <DartsCalculator key={`${activeMatch.id}-${activeMatch.p1}-${activeMatch.p2}`} match={activeMatch} players={players} onClose={() => setActiveMatch(null)} onSave={handleMatchEnd} />}
             </div>
         );
     }
@@ -1117,8 +1157,15 @@
         const [isFinishingMatch, setIsFinishingMatch] = useState(false);
         const [hasTournamentPrize, setHasTournamentPrize] = useState(false);
 
-        const [initialStarter] = useState(() => (Math.random() < 0.5 ? 0 : 1));
-        const [coinFlipLabel] = useState(() => (initialStarter === 0 ? players[match.p1] : players[match.p2]));
+        const [starterDraw] = useState(() => {
+            const starter = Math.random() < 0.5 ? 0 : 1;
+            return {
+                starter,
+                name: players[starter === 0 ? match.p1 : match.p2],
+            };
+        });
+        const [showStarterCoin, setShowStarterCoin] = useState(true);
+        const initialStarter = starterDraw.starter;
         const currentLegIndex = legs[0] + legs[1];
         const legStarter = currentLegIndex % 2 === 0 ? initialStarter : 1 - initialStarter;
 
@@ -1177,6 +1224,14 @@
                 prizeImage.onload = null;
                 prizeImage.onerror = null;
             };
+        }, []);
+
+        useEffect(() => {
+            const timeoutId = window.setTimeout(() => {
+                setShowStarterCoin(false);
+            }, 3600);
+
+            return () => window.clearTimeout(timeoutId);
         }, []);
 
         const playVictoryMusic = () => {
@@ -1423,6 +1478,14 @@
         return (
             <div className="fixed inset-0 z-50 bg-slate-950 flex flex-col font-sans overflow-y-auto overscroll-contain touch-pan-y" style={{ WebkitOverflowScrolling: 'touch' }}>
                 {bust && <div className="absolute inset-0 z-[60] flex items-center justify-center bg-black/60"><div className="bust-overlay text-6xl sm:text-9xl font-black text-red-500 italic">BUST!</div></div>}
+                {showStarterCoin && (
+                    <div className="absolute inset-0 z-[63] flex flex-col items-center justify-center gap-6 bg-black/70 px-4">
+                        <div className="text-yellow-300 text-xl sm:text-3xl font-black uppercase tracking-wide text-center">Aloittajan arvonta käynnissä...</div>
+                        <div className="starter-coin">
+                            <div className="starter-coin-name">{starterDraw.name}</div>
+                        </div>
+                    </div>
+                )}
                 {isFinishingMatch && (
                     <div className="absolute inset-0 z-[65] flex items-center justify-center bg-black/70 overflow-hidden">
                         {showTournamentPrize && (
@@ -1442,7 +1505,6 @@
                     <button onClick={onClose} className="text-slate-400 font-black uppercase text-[10px] hover:text-white transition-all">Lopeta</button>
                     <div className="text-center font-oswald uppercase font-black italic text-sm sm:text-xl leading-tight min-w-0">
                         <span className="player-header-name">{players[match.p1]}</span> <span className="text-yellow-500 mx-1 sm:mx-3">{legs[0]} - {legs[1]}</span> <span className="player-header-name">{players[match.p2]}</span>
-                        <div className="text-[10px] tracking-widest text-slate-400 not-italic mt-1">Aloitusvuoro arvottu: {coinFlipLabel}</div>
                     </div>
                     <div className="w-6 sm:w-10"></div>
                 </div>
