--- a/index.html
+++ b/index.html
@@ -257,16 +257,16 @@
         }
 
         @keyframes starterCoinDrop {
-            0% { opacity: 0; transform: translateY(-180px) rotateX(70deg) scale(0.65); }
-            35% { opacity: 1; transform: translateY(16px) rotateX(0deg) scale(1.06); }
-            55% { transform: translateY(-10px) scale(0.98); }
-            72% { transform: translateY(6px) scale(1.02); }
-            100% { opacity: 1; transform: translateY(0) scale(1); }
+            0% { opacity: 0; transform: translateY(-180px) rotateX(70deg) rotateZ(-1440deg) scale(0.65); }
+            35% { opacity: 1; transform: translateY(16px) rotateX(0deg) rotateZ(-540deg) scale(1.06); }
+            55% { transform: translateY(-10px) rotateZ(-220deg) scale(0.98); }
+            72% { transform: translateY(6px) rotateZ(-80deg) scale(1.02); }
+            100% { opacity: 1; transform: translateY(0) rotateZ(0deg) scale(1); }
         }
 
         @keyframes starterCoinNameSettle {
-            0% { opacity: 0; transform: scale(0.6); }
-            30% { opacity: 1; transform: scale(1.1); }
+            0%, 58% { opacity: 0; transform: scale(0.55); }
+            78% { opacity: 1; transform: scale(1.12); }
             100% { opacity: 1; transform: scale(1); }
         }
 
