--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,7 @@
             };
         });
         const [showStarterCoin, setShowStarterCoin] = useState(true);
+        const isStarterDrawComplete = !showStarterCoin;
         const initialStarter = starterDraw.starter;
         const currentLegIndex = legs[0] + legs[1];
         const legStarter = currentLegIndex % 2 === 0 ? initialStarter : 1 - initialStarter;
@@ -1533,8 +1534,8 @@
                 </div>
                 <div className="flex-1 flex flex-col p-3 sm:p-4 gap-3 sm:gap-4 max-w-4xl mx-auto w-full min-h-[100svh]">
                     <div className="grid grid-cols-2 gap-4">
-                        <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${turn === 0 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p1Score}</div></div>
-                        <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${turn === 1 ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p2Score}</div></div>
+                        <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${(isStarterDrawComplete && turn === 0) ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p1Score}</div></div>
+                        <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${(isStarterDrawComplete && turn === 1) ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p2Score}</div></div>
                     </div>
                     <div className="grid grid-cols-2 gap-3">
                         <button
